match install-config workers to machinepool

--- a/clusters/bry-aws/install-config-secret.yml
+++ b/clusters/bry-aws/install-config-secret.yml
@@ -19,9 +19,9 @@ spec:
         aws:
           rootVolume:
             iops: 2000
-            size: 100
+            size: 120
             type: io1
-          type: m5.xlarge
+          type: c5.4xlarge
           zones:
           - ap-southeast-1a
           - ap-southeast-1b
