correct kustomize error

--- a/base/common/kustomize-configs/namespace-namereference.yml
+++ b/base/common/kustomize-configs/namespace-namereference.yml
@@ -7,7 +7,7 @@ nameReference:
     path: spec/clusterName
 
   - kind: MachinePool
-    apiVersion: hive.openshift.io/v1
+    # apiVersion: hive.openshift.io/v1
     path: spec/clusterDeploymentRef/name
 
   - kind: KlusterletAddonConfig
