--- a/base/common/kustomize-configs/cluster-values-transformer.yml
+++ b/base/common/kustomize-configs/cluster-values-transformer.yml
@@ -31,7 +31,7 @@ replacements:
   - select:
       kind: ClusterDeployment
     fieldPaths: 
-    - spec.provisioning.imageSetRef.name
+    - spec.provisioning.releaseImage
     options:
       create: true
 
